--- a/haarcascade/Makefile.am
+++ b/haarcascade/Makefile.am
@@ -2,4 +2,4 @@
 haarcascade_PYTHON = \
 	haarcascade_frontalface_default.xml
 
-haarcascadedir = $(pythondir)/haarcascade
+haarcascadedir = $(pythondir)/handibox/haarcascade
