--- a/src/Makefile
+++ b/src/Makefile
@@ -161,6 +161,7 @@ VARIABLE = `cat $(FILE)`
 handibox_PYTHON = \
 	HandiboxMain.py\
 	Calibrations.py\
+	camera\
 	Camera.py\
 	CameraSettings.py\
 	FaceTracking.py\
@@ -169,7 +170,6 @@ handibox_PYTHON = \
 	Process_manager.py\
 	ScreenKeyboard.py\
 	ScreenMagnifier.py\
-	haarcascade_frontalface_default.xml\
 	__init__.py
 
 handiboxdir = $(pythondir)/handibox
