--- a/Makefile.in
+++ b/Makefile.in
@@ -213,7 +213,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = src haarcascade
+SUBDIRS = src haarcascade res
 bin_SCRIPTS = handibox
 CLEANFILES = $(bin_SCRIPTS)
 EXTRA_DIST = handibox.in
